Bug 1872410 - Make `nsTableRowGroupFrame::FindLineContaining` allow callers to set aFrame to an out-of-flow child r=emilio, a=dmeehan

If the table-row-group is styled by CSS and it does not have proper table row
children, anonymous table rows and cells are generated and the real content is
rendered in a placeholder.  In this case, the parent of out-of-flow child frame
is the table-row-group frame even though the table-row-group frame has only
anonymous table-row child frame.  Therefore, it fails to query `nsTableRowFrame`
and access `nsIFrame` methods with `nullptr`.

This patch allows the method users to set an out-of-flow child frame and
makes the method return "not found".

Differential Revision: https://phabricator.services.mozilla.com/D197983